2010-04-20  Ozkan Sezer  <sezeroz@gmail.com>

	* misc/gettimeofday.c (FILETIME_1970): Change from 11644473600ull
	to 116444736000000000ull as in the mingw.org version, fixing the
	issue reported by Patrick Galbraith.
	(getntptimeofday): Use a union of unsigned long long and FILETIME
	instead of ULARGE_INTEGER, as in the mingw.org version, to fix the
	strict aliasing violations reported by -Wstrict-aliasing=2.

2010-04-17  Jonathan Yong  <jon_y@sourceforge.net>

	* misc/mbrtowc.c (__mbrtowc_cp): Add nonnull attribute.
	* misc/wcrtomb.c (wcrtomb): Use __UNUSED_PARAM instead of
	__attribute__ ((__unused__))
	(wcsrtombs): Likewise. Sync with mingw.org.
	* misc/wcstof.c: New.
	* misc/wcstold.c: Sync with mingw.org.
	* Makefile.am: Add misc/wcstof.c.
	* Makefile.in: Regenerated.

2010-04-14  Jonathan Yong  <jon_y@sourceforge.net>

	* lib64/kernel32.def (AcquireSRWLockExclusive): New.
	(AcquireSRWLockShared): Likewise.
	(InitializeConditionVariable): Likewise.
	(InitOnceBeginInitialize): Likewise.
	(InitOnceComplete): Likewise.
	(InitOnceExecuteOnce): Likewise.
	(InitializeSRWLock): Likewise.
	(ReleaseSRWLockExclusive): Likewise.
	(ReleaseSRWLockShared): Likewise.
	(SleepConditionVariableCS): Likewise.
	(TryAcquireSRWLockExclusive): Likewise.
	(TryAcquireSRWLockShared): Likewise.
	(WakeAllConditionVariable): Likewise.
	(WakeConditionVariable): Likewise.
	* lib32/kernel32.def (TryAcquireSRWLockExclusive): New.
	(TryAcquireSRWLockShared): Likewise.

2010-04-08  Doug Semler  <dougsemler@gmail.com>

	* stdio/vfscanf.c: Define QUOTE macro expansions and wrap
	  calls from assembly with __MINGW_USYMBOL.
	* stdio/vfwscanf.c: Likewise.
	* stdio/vsscanf.c: Likewise.
	* stdio/vswscanf.c: Likewise.

2010-04-07  Doug Semler  <dougsemler@gmail.com>

	* complex/cpow.c: Remove declaration of pow().

2010-04-01  Doug Semler  <dougsemler@gmail.com>

	* intrincs/_rotl64.c (_rotl64): Simplify logic, we are unsigned.
	* intrincs/_rotr64.c (_rotr64): Likewise.
